# sliver-py

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  README.md  SliverPy (9F68D30C) – Public.asc  protobuf.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autorelease.yml
docs/: conf.py  getting-started.rst  index.rst  install.rst  requirements.txt
docs/api/: beacons.rst  client.rst  clients.rst  commands.rst  config.rst  configuration.rst  index.rst  sessions.rst
docs/protobuf/: client_pb2.rst  common_pb2.rst  index.rst  sliver_pb2.rst
scripts/: protobufgen.py  sliver_install.sh
src/sliver/: __init__.py  _protocols.py  beacon.py  client.py  config.py  interactive.py  protobuf.py  session.py  utils.py
src/sliver/pb/clientpb/: client_pb2.py  client_pb2.pyi
src/sliver/pb/commonpb/: common_pb2.py  common_pb2.pyi
src/sliver/pb/rpcpb/: services_pb2.py  services_pb2.pyi  services_pb2_grpc.py  services_pb2_grpc.pyi
src/sliver/pb/sliverpb/: sliver_pb2.py  sliver_pb2.pyi
tests/: fixtures.py  test_beacon_session.py  test_client.py  test_generate.py  test_interactive.py  test_listeners.py
tests/data/: test_write.v  website.html  website_update.html
