[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sliver-py"
dynamic = ["version"]
description = "Sliver gRPC client library."
readme = "README.md"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.10"
authors = [
    { name = "moloch", email = "875022+moloch--@users.noreply.github.com" },
    { name = "daddycocoaman", email = "daddycocoaman@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]

[project.urls]
Documentation = "https://github.com/moloch--/sliver-py#readme"
Issues = "https://github.com/moloch--/sliver-py/issues"
Source = "https://github.com/moloch--/sliver-py"

[tool.hatch.version]
path = "src/sliver/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "rich~=13.4",
    "black~=23.7", 
    "isort~=5.12",
    "ward~=0.67.2b0",
    "sphinx~=5.1", 
    "sphinx-rtd-theme~=1.0.0", 
    "sphinx-autodoc-typehints~=1.19.4",
]

[tool.hatch.envs.default.scripts]
fmt = [
    "isort src", 
    "black src",
]

[tool.hatch.build]
packages = ["src/sliver"]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
